fix a bug for selected tool visibility

--- a/app/src/pages/DrawingPage.css
+++ b/app/src/pages/DrawingPage.css
@@ -15,6 +15,7 @@
   border: none;
   border-radius: 10px;
 }
+
 .top-toolbar {
   display: flex;
   justify-content: space-between;
@@ -35,16 +36,29 @@
   bottom: 0;
   width: 100%;
   z-index: 10;
-  margin-top: '5px';
+  margin-top: 5px;
 }
 
 .popup {
   position: absolute;
-  bottom: 60px; /* Adjust based on toolbar height */
+  bottom: 70px; 
   left: 50%;
   transform: translateX(-50%);
-  z-index: 9; /* Ensure the popup is above other elements but below the toolbar */
+  z-index: 9;
 }
+
+.color-picker-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+}
+
 .Canvas {
   flex: 1;
   display: flex;
@@ -72,6 +86,43 @@
   bottom: 20px;
 }
 
-.fill-mode .canvas-container {
-  cursor: crosshair;
+
+@media (max-width: 768px) {
+  .top-toolbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bottom-toolbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .popup {
+    bottom: 50px; 
+  }
+
+  .completeButton {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .top-toolbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bottom-toolbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .popup {
+    bottom: 70px;
+  }
+
+  .completeButton {
+    margin-bottom: 10px;
+  }
 }
